# Actors

./: .gitignore  CMakeLists.txt  README.md
include/: actors.h  chunks.h  event_types.h  events.h  indexed_chunk.h  services.h  utils.h
src/: actors.c  chunks.c  events.c  indexed_chunk.c  services.c  utils.c
src/example/: main.c
src/example/actors/: missile.c  missile.h  player.c  player.h
src/example/services/: renderer.c  renderer.h  transform.c  transform.h
